Fixed minor layout issues of forum skin with workflow enabled

--- a/rsc/css/bootstrap-blog_base.css
+++ b/rsc/css/bootstrap-blog_base.css
@@ -966,6 +966,7 @@ input.btn-lg {
   margin: 0 1em 1em 0;
 }
 .evo_item_workflow_form .evo_item_workflow_form__fields {
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   display: -webkit-flex;
